--- a/Part_1_Data_Story_Ideas.Rmd
+++ b/Part_1_Data_Story_Ideas.Rmd
@@ -41,11 +41,27 @@ to ask
 
 3.Basic statistics
 
-4.How journalists look and think about idea generation for data; How to generate data story ideas
+4.Text analysis 
 
-5.Text analysis 
+5.Exploratory data visualization
 
-6.Exploratory data visualization
+How journalists look and think about idea generation for data; How to generate data story ideas
+
+
+As journalists, we seek the unusual, the novel and the unexpected when hunting for stories. The tools in this exercise will help us find such patterns. 
+
+We are working with global life expectancy data from  [gapminder.org](https://www.gapminder.org/data/), which covers 196 countries. This data spans from the year 1800 and has projections extending to 2100.
+
+Your editor gives you the Gapminder dataset and asks for a story in an hour. Where to start? First, we want to know who is winning: which country has the highest life expectancy? We won't reveal the answer here because you're going to use code to find it.
+
+Next, we need to know the countries that are the worst off in terms of life expectancy. Again, the code will help us find these countries. This leads us to report an easy story: “People living in Country_XYZ live the 61% as long as Country_ABC, according to new data.”
+
+In essence, we are looking for outliers, and these tools help describe such patterns.
+
+If your country isn't on the polar ends of the spectrum, we need to learn how it compares to others. That's where averages and medians come into play. Data journalists like to understand the typical case in a dataset, and so we will calculate the mean or median value.
+
+To kick that up a notch, we will look at where your country falls in the distribution. Is it grouped in the lowest quarter of the countries or in the highest tier? We can measure distribution by quartile. 
+
 
 ```{r}
 #install.packages("tidyverse")
@@ -116,9 +132,6 @@ Let's use a filter to determine counties with the lowest life expectancy in 2025
 life_expect |> 
   select(country, X2025) |> 
   filter(X2025 == min(X2025, na.rm = TRUE))
-
-
-
 ```
 
 Obviously, we have a data problem, with Hong Kong and Liechtenstein registering at zero. Let's adjust our query for results greater than zero
@@ -130,10 +143,16 @@ life_expect |>
   filter(X2025 > 0, !is.na(X2025)) |>
   # Then find the minimum among remaining values
   filter(X2025 == min(X2025, na.rm = TRUE)) 
-
-
-
 ```
+
+What's the story here?
+Lesotho residents tend to live about 53 years, according to 2025 data from Gapminder.com, which is 61% as long as the highest life expectancy in Japan and Singapore of 86 years.
+
+Figure the percentage:
+```{r}
+52.8/86
+```
+
 
 Using means
 
@@ -143,6 +162,16 @@ The result, 73.1551, is stored in the variable "life2025"
 life2025 <- mean(life_expect$X2025)
 life2025
 
+```
+
+Get all the data in one place
+```{r}
+life_expect |> 
+  summarize(mean_life = mean(X2025),
+            median_life = median(X2025),
+            min_life = min(X2025),
+            max_life = max(X2025)
+)
 ```
 
 Average life expectancy in 1925
@@ -159,8 +188,6 @@ Percentage change in life expectancy, 1925 v 2025
 The numbers are stored in these variables, so just do the math
 ```{r}
 (life2025-life1925)/life1925 *100
-
-
 ```
 
 Average life expectancy has increased by about 92% since 1925.
@@ -178,12 +205,12 @@ Using the examples above, determine the life expectancy percentage change from 1
 # (life2020-life1975)/life1975 *100
 ```
 
-## Grouping and Summuing. 
+## Grouping and Summing. 
 
 2.Grouping and summarizing (counts, sums and averages); Joins
 (combining rows from datasets) and what it enables 
 
-### Counting
+Counting
 We know the average life expectancy for 2025, 1975 and 1925.
 Let's count the number of countries above these averages
 
@@ -240,8 +267,8 @@ life_1925 |>
 Using the example above, categorize countries as being above or below the 1975 average life expectancy
 ```{r}
 #this portion is blank for the student. 
-# life_1975 <- life_expect |> 
-#   select(country, X1975) |> 
+# life_1975 <- life_expect |>
+#   select(country, X1975) |>
 #   mutate(category = case_when(
 #          X1975 > life1975 ~ "above",
 #           X1975 < life1975 ~ "below")
@@ -265,17 +292,17 @@ Now we combine the three results
 --we rename a column to the same name for all three time periods so they can be combined. This is a good example of using mutate.
 
 ```{r}
-# Transform life_1925 dataframe
-life_1925 <- life_1925 %>%
-  rename(value = X1925) %>%
+# Transform the dataframes, provide year column, rename value
+life_1925 <- life_1925 |> 
+  rename(value = X1925) |> 
   mutate(year = 1925)
 
-life_1975 <- life_1975 %>%
-  rename(value = X1975) %>%
+life_1975 <- life_1975|>
+  rename(value = X1975)|>
   mutate(year = 1975)
 
-life_2025 <- life_2025 %>%
-  rename(value = X2025) %>%
+life_2025 <- life_2025|>
+  rename(value = X2025)|>
   mutate(year = 2025)
 ```
 
@@ -332,7 +359,54 @@ total |>
 ```
 
 
-#### YOUR TURN
+Percentage change
+This is a great tool for understanding trends, especially when dealing with disparate values.
+The calculation is (new value - old value)/old value *100
+We'll calculate the percentage change for Afghanistan, 1925-2025
+```{r}
+
+life_expect |> 
+  select(country, X1925, X2025) |> 
+  filter(country =="Afghanistan") |> 
+  mutate(life_change = ((X2025-X1925) / X1925)*100) 
+```
+
+So life expectancy improved 67% in Afghanistan from 1925-2025
+
+To improve on the display, we use the package formattable that adds the percentage sign
+```{r}
+#install.packages(formattable)
+library(formattable)
+life_expect |> 
+  select(country, X1925, X2025) |> 
+  filter(country =="Afghanistan") |> 
+  mutate(life_change = ((X2025-X1925) / X1925)) |> 
+  mutate(life_change = formattable::percent(life_change, 1))
+```
+
+Biggest / smallest improvements in life expectancy 
+Now we will calculate percentage change life expectancy for all countries
+And we use slice_max to extract the top 10 results
+```{r}
+life_expect |> 
+  select(country, X2025, X1925) |> 
+  # filter(country =="Afghanistan") |> 
+  mutate(pct_change = round((X2025-X1925) / X1925*100,1)) |> 
+  slice_max(pct_change, n= 10) 
+```
+
+And slice_min to extract the bottom 10 results
+```{r}
+life_expect |> 
+  select(country, X2025, X1925) |> 
+  mutate(pct_change = round(((X2025-X1925) / X1925)*100,1)) |> 
+  filter(!is.na(pct_change)) |> #filter out NA values
+  filter(X2025 > 1) |> # filter out a random 0 value for Hong Kong in 2025
+  slice_min(pct_change, n= 10)
+```
+
+
+#### ASSIGNMENT
 Examine life expectancy for 1800, 1900, 2000.
 Determine the mean values for each of those three centuries.
 Using mutate, create a new category column for each decade assigning the counties that are above and below the median value.
@@ -379,16 +453,16 @@ Part 2: Categorize by time period above / below median
 Part 3: Compile 
 ```{r}
 #this portion is blank for the student. 
-# life_1800 <- life_1800 %>%
-#   rename(value = X1800) %>%
+# life_1800 <- life_1800|>
+#   rename(value = X1800)|>
 #   mutate(year = 1800)
 # 
-# life_1900 <- life_1900 %>%
-#   rename(value = X1900) %>%
+# life_1900 <- life_1900|>
+#   rename(value = X1900)|>
 #   mutate(year = 1900)
 # 
-# life_2000 <- life_2000 %>%
-#   rename(value = X2000) %>%
+# life_2000 <- life_2000|>
+#   rename(value = X2000)|>
 #   mutate(year = 2000)
 # 
 # total1800_2000 <- rbind(life_1800, life_1900, life_2000)
@@ -415,6 +489,25 @@ Part 4: Calculate totals, percentages
 # 1900	below	105	56.5	
 # 2000	above	115	58.7	
 # 2000	below	81	41.3	
+```
+
+Calculate the percentage change from 1800 to 1900 and from 1900 to 2000
+Create two tables with the top 10 biggest increases for each period
+```{r}
+#this portion is blank for the student. 
+# change <- life_expect |> 
+#   select(country, X1800, X1900, X2000) |> 
+#   mutate(pct_1900_1800 = ((X1900-X1800) / X1800)*100) |> 
+#   mutate(pct_2000_1900 = ((X2000-X1900) / X1900)*100) 
+# 
+# pct_1900_1800 <- change |> 
+#   select(country, X1900, X1800, pct_1900_1800) |> 
+#   slice_max(pct_1900_1800, n=10)
+# 
+# pct_2000_1900 <- change |> 
+#   select(country, X2000, X1900, pct_2000_1900) |> 
+#   slice_max(pct_2000_1900, n=10)
+
 ```
 
 
@@ -466,6 +559,24 @@ quartile_stats <- life_quartiles |>
 ```
 
 
+Another way to examine data is by calculating results in percentiles.
+We use the command ntile
+```{r}
+life_1925 |> 
+  mutate(percentile = ntile(value, 100)) 
+```
+
+List all countries in the top 90th percentile for life expectancy in 1925
+
+```{r}
+life_1925 |> 
+  mutate(percentile = ntile(value, 100)) |> 
+  filter(percentile > 89) |> 
+  arrange(desc(percentile))
+```
+
+
+
 ### Data Visualization
 
 ```{r}
@@ -487,39 +598,22 @@ Using the examples above
 ```
 
 
+## Text Analysis
 
-
-We see from our quick glance that Andorra lacks entries for the first few years. Let's focus on Andorra using a filter
+https://thescoop.org/data_journalism_book/textanalysis.html
 
 ```{r}
-
-Andorra <- life_expect |> 
-  filter(country == "Andorra") |> 
-   # Convert to long format so we can work with years as values
-  pivot_longer(
-    cols = starts_with("X"), 
-    names_to = "year",
-    values_to = "life_expectancy"
-  ) |>
-  # Remove the "X" prefix from year names and convert to numeric
-  mutate(year = as.numeric(gsub("X", "", year))) |>
-  # Keep only years with non-NA values
-  filter(!is.na(life_expectancy)) |>
-  # Sort by year (optional)
-  arrange(year)
-
 
 ```
 
 
-## Story ideas
-4.How journalists look and think about idea generation for data; How to generate data story ideas
 
 ----------------------------------------------------------------------------
 #Notes
 ----------------------------------------------------------------------------
 
-
+Get a list of countries to group them by continent, asia, europe etc
+Get list of countries with median income
 
 
 Here's another way to combine the three results
@@ -578,6 +672,30 @@ above_average <- data.frame(
 
 above_average
 
+
+
+```
+
+
+
+We see from our quick glance that Andorra lacks entries for the first few years. Let's focus on Andorra using a filter
+
+```{r}
+
+Andorra <- life_expect |> 
+  filter(country == "Andorra") |> 
+   # Convert to long format so we can work with years as values
+  pivot_longer(
+    cols = starts_with("X"), 
+    names_to = "year",
+    values_to = "life_expectancy"
+  ) |>
+  # Remove the "X" prefix from year names and convert to numeric
+  mutate(year = as.numeric(gsub("X", "", year))) |>
+  # Keep only years with non-NA values
+  filter(!is.na(life_expectancy)) |>
+  # Sort by year (optional)
+  arrange(year)
 
 
 ```
