--- a/Part_1_Data_Story_Ideas.Rmd
+++ b/Part_1_Data_Story_Ideas.Rmd
@@ -31,46 +31,99 @@ Rob Wells, Ph.D., Associate Professor
 
 3 hours of content 3-4 lessons per class
 
+1.dpylr verbs (actions that allow users to solve data manipulation
+challenges), and the questions each enables us to ask
 
-1.dpylr verbs (actions that allow users to
-solve data manipulation challenges), and the questions each enables us
-to ask 
-
-2.Grouping and summarizing (counts, sums and averages); Joins
-(combining rows from datasets) and what it enables 
+2.Grouping and summarizing (counts, sums and averages); Joins (combining
+rows from datasets) and what it enables
 
 3.Basic statistics
 
-4.Text analysis 
+4.Text analysis
 
 5.Exploratory data visualization
 
-How journalists look and think about idea generation for data; How to generate data story ideas
+How journalists look and think about idea generation for data; How to
+generate data story ideas
+
+As journalists, we seek the unusual, the novel and the unexpected when
+hunting for stories. The tools in this exercise will help us find such
+patterns.
+
+We are working with global life expectancy data from
+[gapminder.org](https://www.gapminder.org/data/), which covers 196
+countries. This data spans from the year 1800 and has projections
+extending to 2100.
+
+Your editor gives you the Gapminder dataset and asks for a story in an
+hour. Where to start? First, we want to know who is winning: which
+country has the highest life expectancy? We won't reveal the answer here
+because you're going to use code to find it.
+
+Next, we need to know the countries that are the worst off in terms of
+life expectancy. Again, the code will help us find these countries. This
+leads us to report an easy story: “People living in Country_XYZ live the
+61% as long as Country_ABC, according to new data.”
+
+In essence, we are looking for outliers, and these tools help describe
+such patterns.
+
+If your country isn't on the polar ends of the spectrum, we need to
+learn how it compares to others. That's where averages and medians come
+into play. Data journalists like to understand the typical case in a
+dataset, and so we will calculate the mean or median value.
+
+To kick that up a notch, we will look at where your country falls in the
+distribution. Is it grouped in the lowest quarter of the countries or in
+the highest tier? We can measure distribution by quartile.
 
 
-As journalists, we seek the unusual, the novel and the unexpected when hunting for stories. The tools in this exercise will help us find such patterns. 
+## What is R?
 
-We are working with global life expectancy data from  [gapminder.org](https://www.gapminder.org/data/), which covers 196 countries. This data spans from the year 1800 and has projections extending to 2100.
+The basic R programming language comes equipped with the bread and
+butter math and visualization functions. You can perform basic
+mathematical operatons, generate data visualizations, produce
+probability distributions, filter and transform data using the "base R"
+commands.
 
-Your editor gives you the Gapminder dataset and asks for a story in an hour. Where to start? First, we want to know who is winning: which country has the highest life expectancy? We won't reveal the answer here because you're going to use code to find it.
+What makes R so dynamic is the thousands of external libraries (often
+called “packages”) that allow you to build websites, publish books,
+generate interactive graphics and produce topic models.
 
-Next, we need to know the countries that are the worst off in terms of life expectancy. Again, the code will help us find these countries. This leads us to report an easy story: “People living in Country_XYZ live the 61% as long as Country_ABC, according to new data.”
+We will be using the Swiss Army knife of R packages, tidyverse.
+Tidyverse comes with nine basic packages loaded with these strange nerd
+names such as dplyr and readr and ggplot2. We'll use parts of this
+package in each lesson.
 
-In essence, we are looking for outliers, and these tools help describe such patterns.
+By loading this one package, you can:
 
-If your country isn't on the polar ends of the spectrum, we need to learn how it compares to others. That's where averages and medians come into play. Data journalists like to understand the typical case in a dataset, and so we will calculate the mean or median value.
+-   Load data into R (readr)
 
-To kick that up a notch, we will look at where your country falls in the distribution. Is it grouped in the lowest quarter of the countries or in the highest tier? We can measure distribution by quartile. 
+-   Clean and reshape data before analysis (tidyr and dplyr)
 
+-   Pertform data analysis (dplyr)
 
-HERE'S WHAT A LIBRARY IS
-TIDYVERSE
-WRITE CODE IN VIDEOS
+-   Create data visualizations(ggplot2)
+
+To install any external packages, we use the function install.packages().
+
+Here's a little tricky part: You only need to install a library once, the first time you set up your computer. Below, we will install Tidyverse with the funcrtion
+install.packages('tidyverse'). You can type it directly in the console.
 
 ```{r}
 #install.packages("tidyverse")
+```
+
+Here's what you need to remember: you need to load libraries into the program's memory each time you use them. That's pretty standard for programming languages in general; the same applies in Python, for example.
+
+```{r}
 library(tidyverse)
 ```
+
+The tricky part: 
+-   install.packages - once
+-   load the library - each time you need it
+
 
 We'll explore Life Expectancy Data by country, 1800 to present with
 projections to 2100
@@ -81,11 +134,15 @@ Source is [gapminder.org](https://www.gapminder.org/data/)
 here](https://www.gapminder.org/data/documentation/gd004/)
 
 #### Import Life Expectancy Data
+
+For your convenience, I have downloaded a slice of the data into a comma separated values file, "lex.csv"
+
 ```{r}
-life_expect <- read.csv("./assets/lex.csv")
+life_expect <- read_csv("./assets/lex.csv")
 ```
 
 Examine Data
+
 ```{r}
 head(glimpse(life_expect))
 
@@ -93,30 +150,27 @@ head(glimpse(life_expect))
 
 File types:
 
--  <chr> = character, text data
--  <dbl> = numeric data
+-   <chr> = character, text data
+-   <dbl> = numeric data
 
-302 columns - Each year life expectancy data
-196 rows - each row is a country (195 counties)
+302 columns - Each year life expectancy data 196 rows - each row is a
+country (195 counties)
 
-## Dpylr verbs 
+## Dpylr verbs
 
-1.dpylr verbs (actions that allow users to solve data manipulation challenges), and the questions each enables us
-to ask 
+1.dpylr verbs (actions that allow users to solve data manipulation
+challenges), and the questions each enables us to ask
 
-These are the power verbs in R to identify, filter, summarise and create new fields
+These are the power verbs in R to identify, filter, summarise and create
+new fields
 
-Select
-Arrange
-Filter
-Group_by
-Summarize
-Mutate
+Select Arrange Filter Group_by Summarize Mutate
 
 We will deploy these tools in the problems below
 
-Highest life expectancy
-Which country has the highest life expectancy in 2025?
+Highest life expectancy Which country has the highest life expectancy in
+2025?
+
 ```{r}
 
 life_expect |> 
@@ -124,12 +178,13 @@ life_expect |>
   filter(X2025 == max(X2025, na.rm = TRUE))
   
 ```
+
 Japan and Singapore, both at 86 years!
 
 Using filters
 
-Filters can help us find needles in data haystacks.
-Let's use a filter to determine counties with the lowest life expectancy in 2025.
+Filters can help us find needles in data haystacks. Let's use a filter
+to determine counties with the lowest life expectancy in 2025.
 
 ```{r}
 
@@ -138,7 +193,10 @@ life_expect |>
   filter(X2025 == min(X2025, na.rm = TRUE))
 ```
 
-Obviously, we have a data problem, with Hong Kong and Liechtenstein registering at zero. Let's adjust our query for results greater than zero
+Obviously, we have a data problem, with Hong Kong and Liechtenstein
+registering at zero. Let's adjust our query for results greater than
+zero
+
 ```{r}
 
 life_expect |> 
@@ -149,19 +207,21 @@ life_expect |>
   filter(X2025 == min(X2025, na.rm = TRUE)) 
 ```
 
-What's the story here?
-Lesotho residents tend to live about 53 years, according to 2025 data from Gapminder.com, which is 61% as long as the highest life expectancy in Japan and Singapore of 86 years.
+What's the story here? Lesotho residents tend to live about 53 years,
+according to 2025 data from Gapminder.com, which is 61% as long as the
+highest life expectancy in Japan and Singapore of 86 years.
 
 Figure the percentage:
+
 ```{r}
 52.8/86
 ```
 
-
 Using means
 
-Average life expectancy in 2025
-The result, 73.1551, is stored in the variable "life2025"
+Average life expectancy in 2025 The result, 73.1551, is stored in the
+variable "life2025"
+
 ```{r}
 life2025 <- mean(life_expect$X2025)
 life2025
@@ -169,6 +229,7 @@ life2025
 ```
 
 Get all the data in one place
+
 ```{r}
 life_expect |> 
   summarize(mean_life = mean(X2025),
@@ -179,6 +240,7 @@ life_expect |>
 ```
 
 #BASE R FIX - Average life expectancy in 1925
+
 ```{r}
 #Here we added na.rm = TRUE to allow the calculation to skip blank values
 life1925 <- mean(life_expect$X1925, na.rm = TRUE)
@@ -188,8 +250,9 @@ life1925
 
 **38 years was the average life expectancy in 1925!** Wow.
 
-Percentage change in life expectancy, 1925 v 2025
-The numbers are stored in these variables, so just do the math
+Percentage change in life expectancy, 1925 v 2025 The numbers are stored
+in these variables, so just do the math
+
 ```{r}
 (life2025-life1925)/life1925 *100
 ```
@@ -197,7 +260,10 @@ The numbers are stored in these variables, so just do the math
 Average life expectancy has increased by about 92% since 1925.
 
 #### YOUR TURN
-Using the examples above, determine the life expectancy percentage change from 1975 to 2020.
+
+Using the examples above, determine the life expectancy percentage
+change from 1975 to 2020.
+
 ```{r}
 
 #this portion is blank for the student. 
@@ -209,15 +275,13 @@ Using the examples above, determine the life expectancy percentage change from 1
 # (life2020-life1975)/life1975 *100
 ```
 
-## Grouping and Summing. 
+## Grouping and Summing.
 
-2.Grouping and summarizing (counts, sums and averages); Joins
-(combining rows from datasets) and what it enables 
+2.Grouping and summarizing (counts, sums and averages); Joins (combining
+rows from datasets) and what it enables
 
-Counting
-We know the average life expectancy for 2025, 1975 and 1925.
+Counting We know the average life expectancy for 2025, 1975 and 1925.
 Let's count the number of countries above these averages
-
 
 ```{r}
 
@@ -227,8 +291,12 @@ life_expect |>
   count()
 
 ```
+
 #### YOUR TURN
-Using the example above, determine the the number of countries above the 1975 average life expectancy
+
+Using the example above, determine the the number of countries above the
+1975 average life expectancy
+
 ```{r}
 #this portion is blank for the student. 
 # The answer is 113
@@ -238,8 +306,12 @@ Using the example above, determine the the number of countries above the 1975 av
 #   count()
 
 ```
+
 #### YOUR TURN
-Using the example above, determine the the number of countries above the 1925 average life expectancy
+
+Using the example above, determine the the number of countries above the
+1925 average life expectancy
+
 ```{r}
 #this portion is blank for the student. 
 # The answer is 64
@@ -250,7 +322,14 @@ Using the example above, determine the the number of countries above the 1925 av
 ```
 
 ### Mutate
-We are now going to categorize countries as above or below the mean life expectancy by using the mutate command. Mutate creates a new column and there are various stratgies to fill in new results. Here we will assign **above** to all counties in 1925 above the mean life expectancy of 38.11 years. We are using case_when which sets up a logical 'if/else' statement to apply the category
+
+We are now going to categorize countries as above or below the mean life
+expectancy by using the mutate command. Mutate creates a new column and
+there are various stratgies to fill in new results. Here we will assign
+**above** to all counties in 1925 above the mean life expectancy of
+38.11 years. We are using case_when which sets up a logical 'if/else'
+statement to apply the category
+
 ```{r}
 life_1925 <- life_expect |> 
   select(country, X1925) |> 
@@ -261,6 +340,7 @@ life_1925 <- life_expect |>
 ```
 
 Let's count the results
+
 ```{r}
 life_1925 |> 
   count(category)
@@ -268,7 +348,10 @@ life_1925 |>
 ```
 
 #### YOUR TURN
-Using the example above, categorize countries as being above or below the 1975 average life expectancy
+
+Using the example above, categorize countries as being above or below
+the 1975 average life expectancy
+
 ```{r}
 #this portion is blank for the student. 
 # life_1975 <- life_expect |>
@@ -280,7 +363,9 @@ Using the example above, categorize countries as being above or below the 1975 a
 ```
 
 #### YOUR TURN
-Using the example above, categorize countries as being above or below the 2025 average life expectancy
+
+Using the example above, categorize countries as being above or below
+the 2025 average life expectancy
 
 ```{r}
 #this portion is blank for the student. 
@@ -292,8 +377,9 @@ Using the example above, categorize countries as being above or below the 2025 a
 # )
 ```
 
-Now we combine the three results
---we rename a column to the same name for all three time periods so they can be combined. This is a good example of using mutate.
+Now we combine the three results --we rename a column to the same name
+for all three time periods so they can be combined. This is a good
+example of using mutate.
 
 ```{r}
 # Transform the dataframes, provide year column, rename value
@@ -312,9 +398,10 @@ life_2025 <- life_2025|>
 
 ### Joins
 
-Joins (combining rows from datasets) and what it enables 
+Joins (combining rows from datasets) and what it enables
 
 We combine the three using rbind
+
 ```{r}
 
 # Combine the dataframes
@@ -334,11 +421,14 @@ total |>
 ## Basic statistics
 
 ### Percentages
+
 Let's determine the percent above, below the mean
 
 Step 1: Count the categories by year
 
-by grouping by year, we can count up the above and below average countries. The results are in the colummn n
+by grouping by year, we can count up the above and below average
+countries. The results are in the colummn n
+
 ```{r}
 total |> 
    group_by(year) |> 
@@ -347,10 +437,14 @@ total |>
 
 Step Two: Percentage of Whole
 
-We add two lines of code to calculate the percentage. Note how mutate creates a new column that stores the value. And we format it at the end to make it look pretty.
+We add two lines of code to calculate the percentage. Note how mutate
+creates a new column that stores the value. And we format it at the end
+to make it look pretty.
 
-The percent calculation divides the category total into the full number denominator. Because 1925 has 10 null values, we filter those out. Remember, when dealing with historical data, nations and language can change over time.
-
+The percent calculation divides the category total into the full number
+denominator. Because 1925 has 10 null values, we filter those out.
+Remember, when dealing with historical data, nations and language can
+change over time.
 
 ```{r}
 total |> 
@@ -362,11 +456,11 @@ total |>
 
 ```
 
+Percentage change This is a great tool for understanding trends,
+especially when dealing with disparate values. The calculation is (new
+value - old value)/old value \*100 We'll calculate the percentage change
+for Afghanistan, 1925-2025
 
-Percentage change
-This is a great tool for understanding trends, especially when dealing with disparate values.
-The calculation is (new value - old value)/old value *100
-We'll calculate the percentage change for Afghanistan, 1925-2025
 ```{r}
 
 life_expect |> 
@@ -377,7 +471,9 @@ life_expect |>
 
 So life expectancy improved 67% in Afghanistan from 1925-2025
 
-To improve on the display, we use the package formattable that adds the percentage sign
+To improve on the display, we use the package formattable that adds the
+percentage sign
+
 ```{r}
 #install.packages(formattable)
 library(formattable)
@@ -388,9 +484,10 @@ life_expect |>
   mutate(life_change = formattable::percent(life_change, 1))
 ```
 
-Biggest / smallest improvements in life expectancy 
-Now we will calculate percentage change life expectancy for all countries
-And we use slice_max to extract the top 10 results
+Biggest / smallest improvements in life expectancy Now we will calculate
+percentage change life expectancy for all countries And we use slice_max
+to extract the top 10 results
+
 ```{r}
 life_expect |> 
   select(country, X2025, X1925) |> 
@@ -400,6 +497,7 @@ life_expect |>
 ```
 
 And slice_min to extract the bottom 10 results
+
 ```{r}
 life_expect |> 
   select(country, X2025, X1925) |> 
@@ -409,15 +507,18 @@ life_expect |>
   slice_min(pct_change, n= 10)
 ```
 
-
 #### ASSIGNMENT
-Examine life expectancy for 1800, 1900, 2000.
-Determine the mean values for each of those three centuries.
-Using mutate, create a new category column for each decade assigning the counties that are above and below the median value.
-Compile the three decade into a single dataframe
-Produce a single dataframe that counts the number above and below the median, and calculate a percentage of the whole for only those countries with reported data
 
-Part 1: Calculate median values by time period 
+Examine life expectancy for 1800, 1900, 2000. Determine the mean values
+for each of those three centuries. Using mutate, create a new category
+column for each decade assigning the counties that are above and below
+the median value. Compile the three decade into a single dataframe
+Produce a single dataframe that counts the number above and below the
+median, and calculate a percentage of the whole for only those countries
+with reported data
+
+Part 1: Calculate median values by time period
+
 ```{r}
 #this portion is blank for the student. 
 # life1800 <- mean(life_expect$X1800, na.rm = TRUE)
@@ -454,7 +555,8 @@ Part 2: Categorize by time period above / below median
 
 ```
 
-Part 3: Compile 
+Part 3: Compile
+
 ```{r}
 #this portion is blank for the student. 
 # life_1800 <- life_1800|>
@@ -473,8 +575,8 @@ Part 3: Compile
 
 ```
 
-
 Part 4: Calculate totals, percentages
+
 ```{r}
 #this portion is blank for the student. 
  # total1800_2000 |> 
@@ -497,6 +599,7 @@ Part 4: Calculate totals, percentages
 
 Calculate the percentage change from 1800 to 1900 and from 1900 to 2000
 Create two tables with the top 10 biggest increases for each period
+
 ```{r}
 #this portion is blank for the student. 
 # change <- life_expect |> 
@@ -514,33 +617,42 @@ Create two tables with the top 10 biggest increases for each period
 
 ```
 
-
-Distribution of the data
-How are countries grouped? Were there many below the average?
-
+Distribution of the data How are countries grouped? Were there many
+below the average?
 
 ```{r}
 life_1925 |> 
    summary(value)
 ```
 
-We see the lowest value is 21 years life expectancy, the first quartile is up to 32 years, the median value was 36 years, the mean or average was 38 years, the third quartile was 40 years and the maximum value was 64 years.
+We see the lowest value is 21 years life expectancy, the first quartile
+is up to 32 years, the median value was 36 years, the mean or average
+was 38 years, the third quartile was 40 years and the maximum value was
+64 years.
 
 Let's explore the distribution by using a tool called standard deviation
+
 ```{r}
 life_1925_sd <- life_1925 |> 
   summarize(standard_deviation = sd(value, na.rm = TRUE))
 life_1925_sd
 ```
-So we know the mean life expectancy is 38 years. Tells us that 68% of the countries in 1925 fall within one standard deviation, or 9.3 years, of the mean. In other words, 68% of the countries had a life expectancy between 28.3 years and 46.3 years.
 
-Just about all countries, or 95%, fall within two standard deviations from the mean, or 18.6 years; that would be between 19.4 years and 56.6 years of age.
+So we know the mean life expectancy is 38 years. Tells us that 68% of
+the countries in 1925 fall within one standard deviation, or 9.3 years,
+of the mean. In other words, 68% of the countries had a life expectancy
+between 28.3 years and 46.3 years.
 
-And nearly all counties are within three standard deviations, or 27.9 years, or 10.1 years and 65.9 years.
+Just about all countries, or 95%, fall within two standard deviations
+from the mean, or 18.6 years; that would be between 19.4 years and 56.6
+years of age.
 
-This means that any value within 9.3 percentage points of the mean (38 years), either above or below, is within the first group. This provides a sense of outliers and how dispersed the data may be in the dataset.
+And nearly all counties are within three standard deviations, or 27.9
+years, or 10.1 years and 65.9 years.
 
-
+This means that any value within 9.3 percentage points of the mean (38
+years), either above or below, is within the first group. This provides
+a sense of outliers and how dispersed the data may be in the dataset.
 
 ```{r}
 life_quartiles <- life_1925 |> 
@@ -562,15 +674,16 @@ quartile_stats <- life_quartiles |>
   )
 ```
 
+Another way to examine data is by calculating results in percentiles. We
+use the command ntile
 
-Another way to examine data is by calculating results in percentiles.
-We use the command ntile
 ```{r}
 life_1925 |> 
   mutate(percentile = ntile(value, 100)) 
 ```
 
-List all countries in the top 90th percentile for life expectancy in 1925
+List all countries in the top 90th percentile for life expectancy in
+1925
 
 ```{r}
 life_1925 |> 
@@ -578,8 +691,6 @@ life_1925 |>
   filter(percentile > 89) |> 
   arrange(desc(percentile))
 ```
-
-
 
 ### Data Visualization
 
@@ -590,38 +701,37 @@ life_1925 |>
   geom_histogram()
 ```
 
-
-(actions that allow users to solve data manipulation challenges), 
+(actions that allow users to solve data manipulation challenges),
 
 #### YOUR TURN
+
 Using the examples above
+
 ```{r}
 
 
 
 ```
-
 
 ## Text Analysis
 
-https://thescoop.org/data_journalism_book/textanalysis.html
+<https://thescoop.org/data_journalism_book/textanalysis.html>
 
 ```{r}
 
 ```
 
+|        |
+|:-------|
+| #Notes |
 
+Get a list of countries to group them by continent, asia, europe etc Get
+list of countries with median income
 
-----------------------------------------------------------------------------
-#Notes
-----------------------------------------------------------------------------
+Here's another way to combine the three results This code creates a new
+table that puts all the the calculations into one place for easier
+analysis
 
-Get a list of countries to group them by continent, asia, europe etc
-Get list of countries with median income
-
-
-Here's another way to combine the three results
-This code creates a new table that puts all the the calculations into one place for easier analysis
 ```{r}
 
 above_average <- data.frame(
@@ -636,9 +746,11 @@ above_average <- data.frame(
 above_average
 ```
 
-### Percentages 
-Ok, all of that is fine, but do we have a consistent denominator, the same number of countries over time?
-Remember, when dealing with historical data, nations and language can change over time.
+### Percentages
+
+Ok, all of that is fine, but do we have a consistent denominator, the
+same number of countries over time? Remember, when dealing with
+historical data, nations and language can change over time.
 
 Count total number of countries
 
@@ -680,9 +792,8 @@ above_average
 
 ```
 
-
-
-We see from our quick glance that Andorra lacks entries for the first few years. Let's focus on Andorra using a filter
+We see from our quick glance that Andorra lacks entries for the first
+few years. Let's focus on Andorra using a filter
 
 ```{r}
 
